fixed some grid layout issues, added placeholder filter box to get layout correct

--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,13 @@
 }
 
 .App {
-  display: grid;
+  /* display: grid;
   grid-template-columns: .7fr 1fr 1fr; 
-  /* grid-template-rows: 1fr 1fr 1fr;  */
+
   grid-template-areas: 
     'nav nav nav'
     '... main main'
-    'footer footer footer'
+    'footer footer footer' */
 }
 
 .nav-bar-comp{
