--- a/src/components/styleSheets/ShoppingCart.css
+++ b/src/components/styleSheets/ShoppingCart.css
@@ -1,3 +1,4 @@
 .shopping-cart-parent {
     min-height: 80vh;
+    text-align: center;
 }
